# scout-sensor-demo-map

./: .gitignore  .pre-commit-config.yaml  .releaserc  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: build-and-test.yml  get-version.yml  release.yml
src/scout_sensor_demo_map/: cli.py  server.py
src/scout_sensor_demo_map/static/: index.html
src/your_app/: __main__.py
tests/: test_nothing.py
