[build-system]
requires = ["setuptools >= 68.0"]  # other build dependencies e.g. "mypy-protobuf >= 3.0.0"
build-backend = "setuptools.build_meta"

# Here is a funny part how to define your own build hooks with setuptools.
# The file (called __build__.py) must be a top-level file in your project
# and must be included in your package. Or any subsequent `pip` command
# won't work. For example please see https://github.com/dronetag/firmware-bundler
# build-backend = "__build__"
# backend-path = ["src/your-app"]
# This crazy stuff should be gone if/when we switch to `pdm` from setuptools.
# We don't use poetry because it doesn't support standard pyproject.toml nor
# it has build hooks as pdm.

[project]
name = "your-app"
requires-python = ">=3.10"
description = ""
license.text = "MIT"
authors = [
  {name = "Your Name", email = "your-name@dronetag.cz"},
]
dependencies=[
  # "some-lib ==2.1.3",
  # "other-lib >=2.1.3,<3.0",
]

dynamic = ["version", "readme"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.dynamic]
version = {attr = "your_app.__version__.version"}
readme = {file = ["README.md"]}

[project.scripts]
your-entrypoint = "your_app.cli:main"

[project.optional-dependencies]
# extra dependencies for development
dev = [
  "build",
  "pytest",
  "pytest-cov",
  "twine",
  "ruff"
]
# optional 'test' target if tests require more than just pytest
# test = ["some-extra-test-dependency"]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = ["F", "E", "I"]  # F: pyflakes, E: pycodestyle, I: isort
ignore = []
exclude = ["src/*/protos/*", "tests/*"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
# tests should test installed package hence no src/ prefix anywhere
log_cli = 1  # (dis)allow pytest to pass through logs into the main console

[tool.pyright]
# we use pyright for type checking because it is built into VScode. Preferably in
# strict mode. You can omit single lines in code by adding # type: ignore
include = ["src", "tests"]
typeCheckingMode = "strict"
# pythonVersion = "3.7"  # might be good idea to set minimal python version
