[build-system]
requires = ["setuptools >= 68.0"]  # other build dependencies e.g. "mypy-protobuf >= 3.0.0"
build-backend = "setuptools.build_meta"

[project]
name = "scout-sensor-demo-map"
requires-python = ">=3.10"
description = ""
license.text = "MIT"
authors = [
  {name = "Tomas Benes", email = "tomas@dronetag.cz"},
]
dependencies=[
  "aiohttp ==3.9.4",
  "websockets >=15.0.1,<16.0",
  "aiomqtt >=2.3.2,<3.0"
]

dynamic = ["version", "readme"]

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.dynamic]
version = {attr = "scout_sensor_demo_map.__version__.version"}
readme = {file = ["README.md"]}

[project.scripts]
scout-sensor-demo-map = "scout_sensor_demo_map.cli:main"

[project.optional-dependencies]
# extra dependencies for development
dev = [
  "build",
  "pytest",
  "pytest-cov",
  "twine",
  "ruff"
]
# optional 'test' target if tests require more than just pytest
# test = ["some-extra-test-dependency"]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = ["F", "E", "I"]  # F: pyflakes, E: pycodestyle, I: isort
ignore = []
exclude = ["src/*/protos/*", "tests/*"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
# tests should test installed package hence no src/ prefix anywhere
log_cli = 1  # (dis)allow pytest to pass through logs into the main console

[tool.pyright]
# we use pyright for type checking because it is built into VScode. Preferably in
# strict mode. You can omit single lines in code by adding # type: ignore
include = ["src", "tests"]
typeCheckingMode = "strict"
# pythonVersion = "3.7"  # might be good idea to set minimal python version
